--- a/pom.xml
+++ b/pom.xml
@@ -57,8 +57,7 @@
 	</dependencies>
 
 
-	<build>
-		<plugins>
+	<build><plugins>
 				<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
