--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,14 +3,16 @@ version: "3"
 
 services:
   mysqldb:
-   image: mysql:8
    container_name: mysqldb
-   restart: unless-stopped
+   ports:
+    - '3306:3306'
    environment:
-     MYSQL_ROOT_PASSWORD: root
-   volumes :
-     - /home/mysql/data:/var/lib/mysql
-
+    - MYSQL_DATABASE=1
+    - MYSQL_ALLOW_EMPTY_PASSWORD=1
+   restart: always
+   volumes:
+    - mysqldb:/var/lib/mysql:rw
+   image: 'mysql:latest'
   achatproject: 
    image: ahmedsaidi1998/ahmedback:1.0.0
    container_name: achat
@@ -19,5 +21,5 @@ services:
     - 8089:8089
    depends_on:
     - mysqldb
-    
-  
+volumes:
+  mysqldb: { }
